--- a/Grocery List/Info.plist
+++ b/Grocery List/Info.plist
@@ -21,5 +21,24 @@
 			</array>
 		</dict>
 	</dict>
+    
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb266222978789253</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>266222978789253</string>
+    <key>FacebookClientToken</key>
+    <string>bb8ab1154ce2b647381efd11c83c7bb6</string>
+    <key>FacebookDisplayName</key>
+    <string>Grocery List</string>
+    
+    
 </dict>
 </plist>
